# Xenia-Android

./: .gitignore  LICENSE  NOTICE  README.md  build.gradle  gradle.properties  premake5.lua  settings.gradle
android/android_studio_project/: build.gradle
android/android_studio_project/app/: build.gradle
android/android_studio_project/app/src/main/: AndroidManifest.xml
android/android_studio_project/app/src/main/java/jp/xenia/emulator/: EmulatorActivity.java  GameDetailsDialog.java  GameScanner.java  LauncherActivity.java  SettingsActivity.java  WindowedAppActivity.java  XeniaApp.java
android/android_studio_project/app/src/main/res/layout/: activity_button_mapping.xml  activity_emulator.xml  activity_launcher.xml  activity_settings.xml  card_game.xml  item_button_mapping.xml  item_setting.xml  item_setting_header.xml
android/android_studio_project/app/src/main/res/menu/: menu_launcher.xml
android/android_studio_project/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/android_studio_project/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  early_reserve.cc
app/src/main/java/jp/xenia/emulator/: BoxArtManager.java  ButtonMappingActivity.java  DriverManager.java  EmulatorActivity.java  GameGridFragment.java  GamePropertiesDialog.java  OnScreenControlsEditorActivity.java  OnScreenControlsView.java  SettingsActivity.java  WindowedAppActivity.java  XexMetaReader.java  XexThumbnailExtractor.java  XgdfParser.java
app/src/main/res/layout/: dialog_game_details.xml  fragment_game_grid.xml  fragment_ingame_menu.xml  item_game.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-night/: themes.xml
docs/: ARCHITECTURE.md  BUILD.md  CANARY_PATCHES.md  UPDATING_CANARY.md
patches/: xenia-android-canary.patch
scripts/: setup-engine.sh
snapshots/: engine-snapshot-20260622-0822.patch
src/xenia/: emulator.cc  memory.cc
src/xenia/app/: xenia_main.cc
src/xenia/app/discord/: discord_presence.cc
src/xenia/apu/aaudio/: aaudio_audio_system.cc  aaudio_audio_system.h
src/xenia/apu/oboe/: oboe_audio_system.cc  oboe_audio_system.h
src/xenia/base/: byte_order.h  cvar.cc  exception_handler_posix.cc  logging.cc  logging.h  memory_posix.cc  threading_posix.cc
src/xenia/cpu/backend/a64/: a64_assembler.cc  a64_assembler.h  a64_backend.cc  a64_backend.h  a64_code_cache.cc  a64_code_cache.h  a64_emitter.h  a64_function.cc  a64_function.h
src/xenia/cpu/backend/arm64/: arm64_assembler.cc  arm64_assembler.h  arm64_backend.cc  arm64_backend.h  arm64_code_cache.cc  arm64_code_cache.h  arm64_compat.h  arm64_emitter.cc  arm64_emitter.h  arm64_function.cc  arm64_function.h  arm64_op.h  arm64_sequences.h  arm64_sequences_part1.cc  arm64_sequences_part2.cc  arm64_sequences_part3.cc  arm64_stack_layout.h
src/xenia/cpu/compiler/: compiler.cc
src/xenia/cpu/compiler/passes/: conditional_group_pass.cc
src/xenia/cpu/ppc/: ppc_frontend.cc  ppc_opcode_lookup_gen.cc  ppc_scanner.cc  ppc_translator.cc
src/xenia/debug/ui/: debug_window.cc
src/xenia/gpu/: gpu_flags.cc  gpu_flags.h  graphics_system.cc
src/xenia/gpu/vulkan/: vulkan_command_processor.cc  vulkan_shared_memory.cc
src/xenia/hid/: hid_demo.cc
src/xenia/hid/android/: android_hid.cc  android_hid.h  android_input_driver.cc  android_input_driver.h
src/xenia/kernel/: xthread.h
src/xenia/kernel/xam/: xam_info.cc
src/xenia/kernel/xboxkrnl/: xboxkrnl_memory.cc  xboxkrnl_rtl.cc  xboxkrnl_video.cc
src/xenia/ui/: windowed_app.h  windowed_app_context_android.cc  windowed_app_context_android.h
src/xenia/ui/vulkan/: vulkan_api.h
tools/ax360e-study/: NOTES.md  ax360e_runtime_config.toml  config_diff_ours_vs_ax360e.txt  diff_vs_ax360e.sh  extract_ax360e.sh  our_runtime_config.toml
