# =============================================================================
# Xenia Android — app-level native build (codename "Falcon")
#
# This file is OURS (not part of Canary). It builds `libxenia-app.so`, the JNI
# shared library that our Java `WindowedAppActivity` loads via
# System.loadLibrary("xenia-app").
#
# Design rule (see docs/ARCHITECTURE.md): keep the Canary engine pristine. We
# pull it in with add_subdirectory(... EXCLUDE_FROM_ALL) so only the library
# targets we actually link get built — the desktop `xenia-app` EXECUTABLE target
# Canary defines is never built (we don't depend on it). We then assemble our own
# SHARED library from the same Canary sources but with the Android entry point.
#
# Why we don't just reuse Canary's `xenia-app` target:
#   * It's an add_executable (we need a .so for Android).
#   * It uses windowed_app_main_posix.cc (desktop main()); we need
#     windowed_app_main_android.cc (the JNI entry).
#   * It links SDL/discord/debug-ui unconditionally (Canary's "Non-Android" block
#     is mislabeled and not actually guarded) — none of which exist on Android.
# Building our own target sidesteps all of that WITHOUT patching Canary.
# =============================================================================
cmake_minimum_required(VERSION 3.22)
project(xenia-android-app LANGUAGES C CXX ASM)

# Path to the pinned Canary engine submodule (repo_root/third_party/xenia-canary).
# cpp -> main -> src -> app -> repo root  = four levels up.
get_filename_component(CANARY_ROOT
  "${CMAKE_CURRENT_SOURCE_DIR}/../../../../third_party/xenia-canary" ABSOLUTE)

# Canary's CMake helper macros (xe_platform_sources, xe_target_defaults, ...).
list(APPEND CMAKE_MODULE_PATH "${CANARY_ROOT}/cmake")
include("${CANARY_ROOT}/cmake/XeniaHelpers.cmake")

# Canary applies these warning suppressions only within its OWN subdir scope, so our
# app-scope target (xeniaapp, defined below) wouldn't inherit them and would trip -Werror
# (e.g. -Wswitch on Canary's enums). Re-apply them here so our target compiles the same
# Canary sources cleanly. Placed before add_subdirectory so everything shares them.
if(NOT MSVC)
  add_compile_options(
    # First, so the rest are tolerated across NDK/clang versions that may not know a flag
    # (Canary guards some of these by compiler version; we don't need to here).
    $<$<COMPILE_LANGUAGE:CXX>:-Wno-unknown-warning-option>
    $<$<COMPILE_LANGUAGE:CXX>:-Wno-switch>
    $<$<COMPILE_LANGUAGE:CXX>:-Wno-attributes>
    $<$<COMPILE_LANGUAGE:CXX>:-Wno-deprecated-register>
    $<$<COMPILE_LANGUAGE:CXX>:-Wno-deprecated-volatile>
    $<$<COMPILE_LANGUAGE:CXX>:-Wno-deprecated-enum-enum-conversion>
    $<$<COMPILE_LANGUAGE:CXX>:-Wno-deprecated-literal-operator>
    $<$<COMPILE_LANGUAGE:CXX>:-Wno-nontrivial-memcall>
  )
endif()

# --- Generate version.h ------------------------------------------------------
# Canary's code does #include "version.h" (git build info), but that header is
# generated by Xenia's desktop build tooling (premake/xb), which we don't run.
# We generate a minimal one ourselves and add it to the include path so all
# Canary targets find it. This keeps Canary pristine (no patch needed).
set(XENIA_GENERATED_DIR "${CMAKE_BINARY_DIR}/generated")
file(MAKE_DIRECTORY "${XENIA_GENERATED_DIR}")
# Try to capture the pinned Canary commit for a nicer version string.
execute_process(
  COMMAND git -C "${CANARY_ROOT}" rev-parse --short HEAD
  OUTPUT_VARIABLE XENIA_CANARY_COMMIT OUTPUT_STRIP_TRAILING_WHITESPACE
  ERROR_QUIET)
if(NOT XENIA_CANARY_COMMIT)
  set(XENIA_CANARY_COMMIT "0000000")
endif()
string(TIMESTAMP XENIA_BUILD_DATE "%Y-%m-%d")
file(WRITE "${XENIA_GENERATED_DIR}/version.h"
"// Generated by Xenia Android's app build (codename \"Falcon\"). Do not edit.\n"
"#ifndef GENERATED_VERSION_H_\n#define GENERATED_VERSION_H_\n"
"#define XE_BUILD_BRANCH \"xenia-android-falcon\"\n"
"#define XE_BUILD_COMMIT \"${XENIA_CANARY_COMMIT}\"\n"
"#define XE_BUILD_COMMIT_SHORT \"${XENIA_CANARY_COMMIT}\"\n"
"#define XE_BUILD_DATE \"${XENIA_BUILD_DATE}\"\n"
"#define XE_BUILD_PR_NUMBER \"\"\n"
"#define XE_BUILD_PR_REPO \"\"\n"
"#define XE_BUILD_PR_BRANCH \"\"\n"
"#define XE_BUILD_PR_COMMIT_SHORT \"\"\n"
"#endif  // GENERATED_VERSION_H_\n")
# Apply to ALL targets defined below (including Canary's, via add_subdirectory).
include_directories("${XENIA_GENERATED_DIR}")

# Everything links into our shared library (.so), so ALL objects — including FFmpeg's
# hand-written aarch64 assembly (tx_float_neon.S etc.) — must be position-independent, or
# ld.lld rejects the asm data symbols (ff_tx_tab_*) with "recompile with -fPIC". CMake's
# PIC property covers C/C++; we also add -fPIC to ASM_FLAGS explicitly for the .S files.
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
string(APPEND CMAKE_ASM_FLAGS " -fPIC")

# Build the Canary engine. EXCLUDE_FROM_ALL = configure all targets but only
# compile the ones we link below. (Its desktop executable never builds.)
add_subdirectory("${CANARY_ROOT}" "${CMAKE_BINARY_DIR}/xenia-canary" EXCLUDE_FROM_ALL)

# -----------------------------------------------------------------------------
# Our JNI shared library: libxenia-app.so
# -----------------------------------------------------------------------------
# NOTE: Canary's add_subdirectory already defines a target named "xenia-app" (its
# desktop executable, which we never build). So our target uses a distinct name
# `xeniaapp` but sets OUTPUT_NAME "xenia-app" -> still produces libxenia-app.so for
# System.loadLibrary("xenia-app").
add_library(xeniaapp SHARED
  # The emulator itself (registers the EmulatorApp windowed-app).
  "${CANARY_ROOT}/src/xenia/app/xenia_main.cc"
  # Android windowed-app entry point: defines the
  # Java_jp_xenia_emulator_WindowedAppActivity_* JNI functions + bootstraps the
  # WindowedAppContext. (Canary BSD source; picked because we target Android.)
  "${CANARY_ROOT}/src/xenia/ui/windowed_app_main_android.cc"
  # Process init shared by POSIX-family platforms (Android is POSIX/bionic).
  "${CANARY_ROOT}/src/xenia/base/main_init_posix.cc"
  # OURS: reserves the fixed JIT code-cache address ranges at .so load (fixes the
  # flaky "Unable to allocate code cache indirection table" — see the file).
  "${CMAKE_CURRENT_SOURCE_DIR}/early_reserve.cc"
)

# App's own platform sources (emulator_window.cc, profile dialogs, etc.). The
# helper globs the right *_android/_posix files for us (see Canary patch #2).
xe_platform_sources(xeniaapp "${CANARY_ROOT}/src/xenia/app")

target_include_directories(xeniaapp PRIVATE "${CANARY_ROOT}/src" "${CANARY_ROOT}")

# Xbyak (a64 assembler) build knobs, same as Canary's app target uses.
target_compile_definitions(xeniaapp PRIVATE
  XBYAK_NO_OP_NAMES
  XBYAK_ENABLE_OMITTED_OPERAND
)

# --- Engine libraries to link (mirrors Canary's app target, MINUS desktop-only
# --- libs: no SDL/discord/debug-ui/d3d12/x64/alsa/X11). ----------------------
target_link_libraries(xeniaapp PRIVATE
  xenia-apu
  xenia-apu-nop          # silent fallback
  xenia-apu-aaudio       # Android AAudio output (real audio)
  xenia-base
  xenia-core
  xenia-cpu
  xenia-cpu-backend-a64  # the ARM64 JIT — the whole reason we're on Canary
  xenia-gpu
  xenia-gpu-null
  xenia-gpu-vulkan
  xenia-ui
  xenia-ui-vulkan
  xenia-hid
  xenia-hid-nop          # silent fallback
  xenia-hid-android      # Android virtual controller (touch / injected input)
  xenia-kernel
  xenia-patcher
  xenia-vfs
  # Third-party (same set Canary's app links)
  glslang-spirv
  aes_128
  capstone
  fmt
  dxbc
  imgui
  libavcodec
  libavutil
  mspack
  snappy
  xxhash
  # Android system libs
  android
  log
  vulkan
)

# FFmpeg's hand-written aarch64 asm references global data tables (ff_tx_tab_*) with direct
# ADRP/ADD addressing. In a shared library those globals are preemptible by default, so
# ld.lld rejects the relocations ("recompile with -fPIC"). -Bsymbolic binds intra-library
# references locally (non-preemptible), which makes the relocations resolvable. We don't rely
# on symbol interposition, so this is safe.
target_link_options(xeniaapp PRIVATE "-Wl,-Bsymbolic")

# Apply Canary's standard per-target compile/warn settings.
xe_target_defaults(xeniaapp)
# Safety net: the app-level sources are desktop-oriented Canary code; on Android the stricter
# NDK clang may surface extra warnings. Don't let them fail the build (real errors still do).
target_compile_options(xeniaapp PRIVATE -Wno-error)

# ---------------------------------------------------------------------------
# XENIA-ANDROID: on-device unit tests. The a64 JIT and our threading/memory
# changes can only be validated on real arm64 — so build the engine's existing
# Catch2 suites as device executables (run from /data/local/tmp). This is OUR
# file, so it needs no engine patch. Built on demand via:
#   cmake --build <cxx-dir> --target xenia-base-tests
# ---------------------------------------------------------------------------
file(GLOB _xa_base_tests "${CANARY_ROOT}/src/xenia/base/testing/*_test.cc")
add_executable(xenia-base-tests
  ${_xa_base_tests}
  "${CANARY_ROOT}/tools/build/src/test_suite_main.cc"
  "${CANARY_ROOT}/src/xenia/base/console_app_main_posix.cc"
)
target_include_directories(xenia-base-tests PRIVATE "${CANARY_ROOT}/src" "${CANARY_ROOT}")
target_compile_definitions(xenia-base-tests PRIVATE "XE_TEST_SUITE_NAME=\"xenia-base-tests\"")
target_link_libraries(xenia-base-tests PRIVATE fmt xenia-base xenia-core xenia-cpu log)
xe_target_defaults(xenia-base-tests)
target_compile_options(xenia-base-tests PRIVATE -Wno-error)

# XENIA-ANDROID: a64 JIT correctness tests (cpu/testing -> generates guest code,
# runs it through the A64 backend, checks results). Validates the ARM64 codegen.
file(GLOB _xa_cpu_tests "${CANARY_ROOT}/src/xenia/cpu/testing/*_test.cc")
  list(FILTER _xa_cpu_tests EXCLUDE REGEX "backend_integration_test")
add_executable(xenia-cpu-tests
  ${_xa_cpu_tests}
  "${CANARY_ROOT}/tools/build/src/test_suite_main.cc"
  "${CANARY_ROOT}/src/xenia/base/console_app_main_posix.cc"
)
target_include_directories(xenia-cpu-tests PRIVATE "${CANARY_ROOT}/src" "${CANARY_ROOT}")
target_compile_definitions(xenia-cpu-tests PRIVATE "XE_TEST_SUITE_NAME=\"xenia-cpu-tests\"")
target_link_libraries(xenia-cpu-tests PRIVATE
  capstone fmt imgui xenia-base xenia-core xenia-cpu xenia-gpu
  xenia-kernel xenia-ui xenia-patcher xenia-cpu-backend-a64 log)
xe_target_defaults(xenia-cpu-tests)
target_compile_options(xenia-cpu-tests PRIVATE -Wno-error)

# XENIA-ANDROID: kernel + vfs unit tests (on-device).
file(GLOB _xa_kernel_tests "${CANARY_ROOT}/src/xenia/kernel/testing/*_test.cc")
add_executable(xenia-kernel-tests ${_xa_kernel_tests}
  "${CANARY_ROOT}/tools/build/src/test_suite_main.cc"
  "${CANARY_ROOT}/src/xenia/base/console_app_main_posix.cc")
target_include_directories(xenia-kernel-tests PRIVATE "${CANARY_ROOT}/src" "${CANARY_ROOT}")
target_compile_definitions(xenia-kernel-tests PRIVATE "XE_TEST_SUITE_NAME=\"xenia-kernel-tests\"")
target_link_libraries(xenia-kernel-tests PRIVATE fmt xenia-base xenia-core xenia-cpu log)
xe_target_defaults(xenia-kernel-tests)
target_compile_options(xenia-kernel-tests PRIVATE -Wno-error)

file(GLOB _xa_vfs_tests "${CANARY_ROOT}/src/xenia/vfs/testing/*_test.cc")
add_executable(xenia-vfs-tests ${_xa_vfs_tests}
  "${CANARY_ROOT}/tools/build/src/test_suite_main.cc"
  "${CANARY_ROOT}/src/xenia/base/console_app_main_posix.cc")
target_include_directories(xenia-vfs-tests PRIVATE "${CANARY_ROOT}/src" "${CANARY_ROOT}")
target_compile_definitions(xenia-vfs-tests PRIVATE "XE_TEST_SUITE_NAME=\"xenia-vfs-tests\"")
target_link_libraries(xenia-vfs-tests PRIVATE fmt xenia-base xenia-core xenia-cpu xenia-vfs log)
xe_target_defaults(xenia-vfs-tests)
target_compile_options(xenia-vfs-tests PRIVATE -Wno-error)
